--- a/index.html
+++ b/index.html
@@ -16,31 +16,43 @@
 
     <body>
 
-        <header class="container-fluid">
+        <div class="container-fluid">
 
-            <h1>Luke Shepherd</h1>
+            <header class="row">
 
-            <nav>
+                <div class="col-md-6">
 
-                <ul class="nav justify-content-end">
+                    <h1>Luke Shepherd</h1>
 
-                    <li class="nav-item">
-                        <a class="nav-link active" href="index.html">About</a>
-                    </li>
+                </div>
 
-                    <li class="nav-item">
-                        <a class="nav-link" href="portfolio.html">Portfolio</a>
-                    </li>
+                <div class="col-md-6 no-padding">
 
-                    <li class="nav-item no-border">
-                        <a class="nav-link" href="contact.html">Contact</a>
-                    </li>
+                    <nav>
 
-                </ul>
+                        <ul class="nav justify-content-end">
 
-            </nav>
+                            <li class="nav-item">
+                                <a class="nav-link active" href="index.html">About</a>
+                            </li>
 
-        </header>
+                            <li class="nav-item">
+                                <a class="nav-link" href="portfolio.html">Portfolio</a>
+                            </li>
+
+                            <li class="nav-item no-border">
+                                <a class="nav-link" href="contact.html">Contact</a>
+                            </li>
+
+                        </ul>
+
+                    </nav>
+
+                </div>
+
+            </header>
+
+        </div>
 
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 
