Added content and styling of about me page

--- a/index.html
+++ b/index.html
@@ -52,6 +52,42 @@
 
             </header>
 
+            <section class="col-md-7 about-container">
+
+                <div class="row">
+
+                    <div class="col-md-12">
+
+                        <h2>About Me</h2>
+
+                    </div>
+
+                </div>
+
+                <div class="row about-p1">
+
+                    <div class="col-md-12">
+
+                        <img src="Assets/Images/Slack-cover-photo.jpeg" alt="Profile picture" class="profile-pic">
+
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas fringilla tempus auctor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam vehicula quam a molestie mattis. Integer in tempus justo. Nunc interdum eros lectus, nec gravida magna tristique in. Curabitur consectetur nisl id odio egestas sodales. Proin mauris metus, condimentum at ultrices vel, feugiat non massa. Maecenas ut egestas nibh. Suspendisse potenti. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed malesuada leo augue, efficitur scelerisque augue mattis eget.</p>
+
+                    </div>
+
+                </div>
+
+                <div class="row about-p2">
+
+                    <div class="col-md-12">
+
+                        <p>Aliquam suscipit sem ligula, in semper ante cursus vel. Sed finibus libero magna, non consequat est tempus vel. Vivamus id eros laoreet, mollis sem non, bibendum mauris. Nullam id porttitor velit. Integer in interdum lacus.</p>
+
+                    </div>
+
+                </div>
+
+            </section>
+
         </div>
 
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
