corrected content margins, fixed bug where content would take up width of screen if pixel width lowered below 1000, added portfolio page

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
             </header>
 
-            <section class="col-md-7 about-container">
+            <section class="content-container">
 
                 <div class="row">
 
