--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
         
         <div class="container-fluid">
 
-            <header class="row">
+            <header class="row no-wrap">
 
                 <div class="col-md-6">
 
@@ -26,7 +26,7 @@
 
                 </div>
 
-                <div class="col-md-6 no-padding">
+                <div class="col-md-6">
 
                     <nav>
 
@@ -41,7 +41,7 @@
                             </li>
 
                             <li class="nav-item no-border">
-                                <a class="nav-link" href="contact.html">Contact</a>
+                                <a class="nav-link no-right-padding" href="contact.html">Contact</a>
                             </li>
 
                         </ul>
