--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
 
         <div class="container-fluid">
 
-            <header class="row">
+            <header class="row no-wrap">
 
                 <div class="col-md-6">
 
@@ -26,7 +26,7 @@
 
                 </div>
 
-                <div class="col-md-6 no-padding">
+                <div class="col-md-6">
 
                     <nav>
 
@@ -41,7 +41,7 @@
                             </li>
 
                             <li class="nav-item no-border">
-                                <a class="nav-link" href="contact.html">Contact</a>
+                                <a class="nav-link no-right-padding" href="contact.html">Contact</a>
                             </li>
 
                         </ul>
@@ -51,6 +51,98 @@
                 </div>
 
             </header>
+
+            <section class="content-container">
+
+                <div class="row">
+
+                    <div class="col-md-12">
+
+                        <h2>Portfolio</h2>
+
+                    </div>
+
+                </div>
+
+                <div class="row content-row margin-top">
+
+                    <div class="col-md-6 center">
+
+                        <img src="Assets/Images/senate.jpeg" alt="Chancellor Palpatine as the Senate">
+
+                        <div class="text-box">
+
+                            <p class="text">I am the Senate</p>
+
+                        </div>
+
+                    </div>
+
+                    <div class="col-md-6 center">
+
+                        <img src="Assets/Images/senate.jpeg" alt="Chancellor Palpatine as the Senate">
+
+                        <div class="text-box">
+
+                            <p class="text">No... I am the Senate</p>
+
+                        </div>
+
+                    </div>
+
+                </div>
+
+                <div class="row content-row">
+
+                    <div class="col-md-6 center">
+
+                        <img src="Assets/Images/senate.jpeg" alt="Chancellor Palpatine as the Senate">
+
+                        <div class="text-box">
+
+                            <p class="text">We are all the Senate</p>
+
+                        </div>
+
+                    </div>
+
+                    <div class="col-md-6 center">
+
+                        <img src="Assets/Images/treason-1.jpeg" alt="Chancellor Palpatine as the Senate">
+
+                        <div class="text-box">
+
+                            <p class="text">It's treason, then</p>
+
+                        </div>
+                        
+                    </div>
+
+                </div>
+
+                <div class="row content-row">
+
+                    <div class="col-md-6 center">
+
+                        <img src="Assets/Images/sheev-spin.jpeg" alt="Chancellor Palpatine as the Senate">
+
+                        <div class="text-box">
+
+                            <p class="text">*in Sith* NYYAAA!</p>
+
+                        </div>
+
+                    </div>
+
+                    <div class="col-md-6">
+
+
+                        
+                    </div>
+
+                </div>
+
+            </section>
 
         </div>
 
