Added contact form and rough-draft of footer, cleaned up content margins/spacing

--- a/portfolio.html
+++ b/portfolio.html
@@ -64,7 +64,7 @@
 
                 </div>
 
-                <div class="row content-row margin-top">
+                <div class="row portfolio-row margin-top">
 
                     <div class="col-md-6 center">
 
@@ -92,7 +92,7 @@
 
                 </div>
 
-                <div class="row content-row">
+                <div class="row portfolio-row">
 
                     <div class="col-md-6 center">
 
@@ -108,7 +108,7 @@
 
                     <div class="col-md-6 center">
 
-                        <img src="Assets/Images/treason-1.jpeg" alt="Chancellor Palpatine as the Senate">
+                        <img src="Assets/Images/treason-1.jpeg" alt="Treason being committed against Chancellor Palpatine">
 
                         <div class="text-box">
 
@@ -120,11 +120,11 @@
 
                 </div>
 
-                <div class="row content-row">
+                <div class="row portfolio-row">
 
                     <div class="col-md-6 center">
 
-                        <img src="Assets/Images/sheev-spin.jpeg" alt="Chancellor Palpatine as the Senate">
+                        <img src="Assets/Images/sheev-spin.jpeg" alt="Chancellor Palapatine spinning through the air and screeching">
 
                         <div class="text-box">
 
@@ -143,6 +143,12 @@
                 </div>
 
             </section>
+
+            <footer class="row border-top">
+
+                <p>Copywrite</p>
+
+            </footer>
 
         </div>
 
