made portoflio images and contact form responsive at 768px, 640px

--- a/portfolio.html
+++ b/portfolio.html
@@ -66,25 +66,33 @@
 
                 <div class="row portfolio-row margin-top">
 
-                    <div class="col-md-6 center">
+                    <div class="col-md-6 port-img-col">
 
-                        <img src="Assets/Images/senate.jpeg" alt="Chancellor Palpatine as the Senate">
+                        <div class="img-container">
 
-                        <div class="text-box">
+                            <img src="Assets/Images/senate.jpeg" alt="Chancellor Palpatine as the Senate">
 
-                            <p class="text">I am the Senate</p>
+                            <div class="text-box">
+
+                                <p class="text">I am the Senate</p>
+
+                            </div>
 
                         </div>
 
                     </div>
 
-                    <div class="col-md-6 center">
+                    <div class="col-md-6 port-img-col">
 
-                        <img src="Assets/Images/senate.jpeg" alt="Chancellor Palpatine as the Senate">
+                        <div class="img-container">
 
-                        <div class="text-box">
+                            <img src="Assets/Images/senate.jpeg" alt="Chancellor Palpatine as the Senate">
 
-                            <p class="text">No... I am the Senate</p>
+                            <div class="text-box">
+
+                                <p class="text">No... I am the Senate</p>
+
+                            </div>
 
                         </div>
 
@@ -94,25 +102,33 @@
 
                 <div class="row portfolio-row">
 
-                    <div class="col-md-6 center">
+                    <div class="col-md-6 port-img-col">
 
-                        <img src="Assets/Images/senate.jpeg" alt="Chancellor Palpatine as the Senate">
+                        <div class="img-container">
 
-                        <div class="text-box">
+                            <img src="Assets/Images/senate.jpeg" alt="Chancellor Palpatine as the Senate">
 
-                            <p class="text">We are all the Senate</p>
+                            <div class="text-box">
+
+                                <p class="text">We are all the Senate</p>
+
+                            </div>
 
                         </div>
 
                     </div>
 
-                    <div class="col-md-6 center">
+                    <div class="col-md-6 port-img-col">
 
-                        <img src="Assets/Images/treason-1.jpeg" alt="Treason being committed against Chancellor Palpatine">
+                        <div class="img-container">
 
-                        <div class="text-box">
+                            <img src="Assets/Images/treason-1.jpeg" alt="Treason being committed against Chancellor Palpatine">
 
-                            <p class="text">It's treason, then</p>
+                            <div class="text-box">
+
+                                <p class="text">It's treason, then</p>
+
+                            </div>
 
                         </div>
                         
@@ -122,13 +138,17 @@
 
                 <div class="row portfolio-row">
 
-                    <div class="col-md-6 center">
+                    <div class="col-md-6 port-img-col">
 
-                        <img src="Assets/Images/sheev-spin.jpeg" alt="Chancellor Palapatine spinning through the air and screeching">
+                        <div class="img-container">
 
-                        <div class="text-box">
+                            <img src="Assets/Images/sheev-spin.jpeg" alt="Chancellor Palapatine spinning through the air and screeching">
 
-                            <p class="text">*in Sith* NYYAAA!</p>
+                            <div class="text-box">
+
+                                <p class="text">*in Sith* NYYAAA!</p>
+
+                            </div>
 
                         </div>
 
