styled and fixed footer to bottom of page. corrected about me page responsiveness at 640px

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <body>
 
-        <div class="container-fluid">
+        <div class="container-fluid main-container">
 
             <header class="row no-wrap">
 
@@ -88,9 +88,13 @@
 
             </section>
 
-            <footer class="row border-top">
+        </div>
 
-                <p>Copywrite</p>
+        <div class="container-fluid">
+
+            <footer class="row">
+
+                <p>&copy; Copyright</p>
 
             </footer>
 
