--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 
     <head>
 
-        <meta charset="UTF-8">
+        <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
 
         <title>Contact | Luke Shepherd</title>
 
@@ -26,7 +26,7 @@
 
                 </div>
 
-                <div class="col-md-6">
+                <div class="col-md-6 nav-col">
 
                     <nav>
 
