added mobile responsiveness at 576px and lower to remove main content margins. Fixed footer to bottom of page for all viewports

--- a/contact.html
+++ b/contact.html
@@ -72,7 +72,7 @@
 
                 <article class="content-container">
 
-                    <div class="row">
+                    <div class="row title-row">
 
                         <div class="col-md-12">
 
@@ -123,10 +123,6 @@
                 </article>
 
             </main>
-
-        </div>
-
-        <div class="container-fluid">
 
             <footer class="row">
 
