--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
                 <article class="content-container">
 
-                    <div class="row">
+                    <div class="row title-row">
 
                         <div class="col-md-12">
 
@@ -107,10 +107,6 @@
                 </article>
 
             </main>
-
-        </div>
-
-        <div class="container-fluid">
 
             <footer class="row">
 
