Replaced lorem ipsum in About Me section with personal bio

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
                             <img src="Assets/Images/Slack-cover-photo.jpeg" alt="Profile picture" class="profile-pic">
 
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas fringilla tempus auctor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam vehicula quam a molestie mattis. Integer in tempus justo. Nunc interdum eros lectus, nec gravida magna tristique in. Curabitur consectetur nisl id odio egestas sodales. Proin mauris metus, condimentum at ultrices vel, feugiat non massa. Maecenas ut egestas nibh. Suspendisse potenti. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed malesuada leo augue, efficitur scelerisque augue mattis eget.</p>
+                            <p>I graduated from the University of Washington in 2017 with a Bachelor of Science Degree in Psychology with the intention of later applying to a graduate program to become a prosthetics and orthotics clinician. My coursework in preparation for a prosthetics career included biology, chemistry, physics, and mathematics. After graduation, I was unfortunately unable to enroll in a prosthetics graduate program due to the development of back issues from the demanding physical nature of a prosthetics career. Since then, I have worked on the administrative side of the healthcare field and am currently a Patient Care Coordinator for a gastroenterology clinic at Swedish Medical Group in Ballard. While I have learned much during my time in the healthcare field, my career interests have grown outside of patient care.</p>
 
                         </div>
 
@@ -100,7 +100,7 @@
 
                         <div class="col-md-12">
 
-                            <p>Aliquam suscipit sem ligula, in semper ante cursus vel. Sed finibus libero magna, non consequat est tempus vel. Vivamus id eros laoreet, mollis sem non, bibendum mauris. Nullam id porttitor velit. Integer in interdum lacus.</p>
+                            <p>I have been interested in computer programming ever since I was introduced to HTML in middle school and have recently decided to pursue it as a potential career. In my free time, I completed an online web development course through Udemy.com and am currently enrolled in the University of Washington Full Stack Web Development bootcamp. My current goal is to pursue a career in full-stack web development following the completion of my programming education.</p>
 
                         </div>
 
