--- a/portfolio.html
+++ b/portfolio.html
@@ -120,17 +120,21 @@
 
                         <section class="col-md-6 port-img-col">
 
-                            <!-- Portfolio image 1 -->
+                            <a href="https://sheplt1.github.io/hows-the-weather/" target="_blank">
 
-                            <img src="Assets/Images/senate.jpeg" alt="Chancellor Palpatine as the Senate">
+                                <!-- Portfolio image 1 -->
 
-                            <!-- Portfolio image text box -->
+                                <img src="Assets/Images/weather-forecast.png" alt="Weather Forecaster Thumbnail">
 
-                            <div class="text-box">
+                                <!-- Portfolio image text box -->
 
-                                <p class="text">I am the Senate</p>
+                                <div class="text-box">
 
-                            </div>
+                                    <p class="text">Weather Forecaster</p>
+
+                                </div>
+
+                            </a>
 
                         </section>
 
@@ -138,17 +142,21 @@
 
                         <section class="col-md-6 port-img-col">
 
-                            <!-- Portfolio image 2 -->
+                            <a href="https://sheplt1.github.io/covid-tracker/" target="_blank">
 
-                            <img src="Assets/Images/senate.jpeg" alt="Chancellor Palpatine as the Senate">
+                                <!-- Portfolio image 2 -->
 
-                            <!-- Portfolio image text box -->
+                                <img src="Assets/Images/covid-tracker.png" alt="COVID-19 Tracker Thumbnail">
 
-                            <div class="text-box">
+                                <!-- Portfolio image text box -->
 
-                                <p class="text">No... I am the Senate</p>
+                                <div class="text-box">
 
-                            </div>
+                                    <p class="text">COVID-19 Tracker</p>
+
+                                </div>
+
+                            </a>
 
                         </section>
 
@@ -160,17 +168,21 @@
 
                         <section class="col-md-6 port-img-col">
 
-                            <!-- Portfolio image 3 -->
+                            <a href="https://sheplt1.github.io/Day-Planner/" target="_blank">
 
-                            <img src="Assets/Images/senate.jpeg" alt="Chancellor Palpatine as the Senate">
+                                <!-- Portfolio image 3 -->
 
-                            <!-- Portfolio image text box -->
+                                <img src="Assets/Images/day-planner.png" alt="Day Planner Thumbnail">
 
-                            <div class="text-box">
+                                <!-- Portfolio image text box -->
 
-                                <p class="text">We are all the Senate</p>
+                                <div class="text-box">
 
-                            </div>
+                                    <p class="text">Day Planner</p>
+
+                                </div>
+
+                            </a>
 
                         </section>
 
@@ -178,17 +190,21 @@
 
                         <section class="col-md-6 port-img-col">
 
-                            <!-- Portfolio image 4 -->
+                            <a href="https://sheplt1.github.io/Password-Generator/" target="_blank">
 
-                            <img src="Assets/Images/treason-1.jpeg" alt="Treason being committed against Chancellor Palpatine">
+                                <!-- Portfolio image 4 -->
 
-                            <!-- Portfolio image text box -->
+                                <img src="Assets/Images/password-generator.png" alt="Password Generator Thumbnail">
 
-                            <div class="text-box">
+                                <!-- Portfolio image text box -->
 
-                                <p class="text">It's treason, then</p>
+                                <div class="text-box">
 
-                            </div>
+                                    <p class="text">Password Generator</p>
+
+                                </div>
+
+                            </a>
                             
                         </section>
 
@@ -214,9 +230,23 @@
 
                         </section>
 
-                        <!-- Empty column container filling leftover space in the row -->
+                        <!-- Portfolio Github Links Container -->
 
-                        <div class="col-md-6"></div>
+                        <section class="col-md-6 port-img-col">
+
+                            <!-- Portfolio Github Links -->
+
+                            <h4 id="repo-title">Github Repositories</h4>
+
+                            <p class="repo-links"><a href="https://github.com/ShepLT1/hows-the-weather" target="_blank">Weather Forecaster</a></p>
+
+                            <p class="repo-links"><a href="https://github.com/ShepLT1/covid-tracker" target="_blank">COVID-19 Tracker</a></p>
+
+                            <p class="repo-links"><a href="https://github.com/ShepLT1/Day-Planner" target="_blank">Day Planner</a></p>
+
+                            <p class="repo-links"><a href="https://github.com/ShepLT1/Password-Generator" target="_blank">Password Generator</a></p>
+
+                        </section>
 
                     </div>
 
