Added src to resume link, placed resume pdf in assets folder

--- a/contact.html
+++ b/contact.html
@@ -200,11 +200,11 @@
 
                                     <br>
 
-                                    <p><a href="" target="_blank">Resume</a></p>
+                                    <p><a href="./Assets/Luke-Shepherd-Resume.pdf" target="_blank">Resume</a></p>
 
                                     <p></p><a href="https://github.com/ShepLT1" target="_blank">Github Profile</a></p>
 
-                                    <p><a href="https://www.linkedin.com/in/luke-shepherd-9a66501a1/"  target="_blank">LinkedIn Profile</a></p>
+                                    <p><a href="https://www.linkedin.com/in/luke-t-shepherd"  target="_blank">LinkedIn Profile</a></p>
 
                                 </div>
 
